Mise à jour reunionv2 - nouvelle version

--- a/public/styles/vote-component.css
+++ b/public/styles/vote-component.css
@@ -106,7 +106,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-image: url("/img/css/painted-relief-texture.jpg");
+  background-image: url("/img/css/Illustration_sans_titre 3.png");
   background-size: cover;
   background-position: center;
   opacity: 0.25;
